--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RM99727</title>
+    <script src="./JS/script.js" defer></script>
 </head>
-<body>
+<body onload="soma()">
 
     <h1>Exemplo funções</h1>
     
     <div id="div-box">
+        DIV - List
         <ul>
             <li>Item-</li>
             <li>Item-</li>
@@ -19,6 +21,6 @@
             <li>Item-</li>
         </ul>
     </div>   
-    
+
 </body>
 </html>
